--- a/src/app/module/login-register/register-login/register-login.component.html
+++ b/src/app/module/login-register/register-login/register-login.component.html
@@ -6,75 +6,77 @@
 
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index-register.html"><img src="assets/images/logo.png" alt="logo" /></a>
+        <a class="navbar-brand" href="index-register.html"><img src="assets/images/logo.png" alt="logo"/></a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right main-menu">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span><img src="assets/images/down-arrow.png" alt="" /></span></a>
-            <ul class="dropdown-menu newsfeed-home">
-              <li><a href="index.html">Landing Page 1</a></li>
-              <li><a href="index-register.html">Landing Page 2</a></li>
-            </ul>
-          </li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Newsfeed <span><img src="assets/images/down-arrow.png" alt="" /></span></a>
-            <ul class="dropdown-menu newsfeed-home">
-              <li><a href="newsfeed.html">Newsfeed</a></li>
-              <li><a href="newsfeed-people-nearby.html">Poeple Nearly</a></li>
-              <li><a href="newsfeed-friends.html">My friends</a></li>
-              <li><a href="newsfeed-messages.html">Chatroom</a></li>
-              <li><a href="newsfeed-images.html">Images</a></li>
-              <li><a href="newsfeed-videos.html">Videos</a></li>
-            </ul>
-          </li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Timeline <span><img src="assets/images/down-arrow.png" alt="" /></span></a>
-            <ul class="dropdown-menu login">
-              <li><a href="timeline.html">Timeline</a></li>
-              <li><a href="timeline-about.html">Timeline About</a></li>
-              <li><a href="timeline-album.html">Timeline Album</a></li>
-              <li><a href="timeline-friends.html">Timeline Friends</a></li>
-              <li><a href="edit-profile-basic.html">Edit: Basic Info</a></li>
-              <li><a href="edit-profile-work-edu.html">Edit: Work</a></li>
-              <li><a href="edit-profile-interests.html">Edit: Interests</a></li>
-              <li><a href="edit-profile-settings.html">Account Settings</a></li>
-              <li><a href="edit-profile-password.html">Change Password</a></li>
-            </ul>
-          </li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle pages" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">All Pages <span><img src="assets/images/down-arrow.png" alt="" /></span></a>
-            <ul class="dropdown-menu page-list">
-              <li><a href="index.html">Landing Page 1</a></li>
-              <li><a href="index-register.html">Landing Page 2</a></li>
-              <li><a href="newsfeed.html">Newsfeed</a></li>
-              <li><a href="newsfeed-people-nearby.html">Poeple Nearly</a></li>
-              <li><a href="newsfeed-friends.html">My friends</a></li>
-              <li><a href="newsfeed-messages.html">Chatroom</a></li>
-              <li><a href="newsfeed-images.html">Images</a></li>
-              <li><a href="newsfeed-videos.html">Videos</a></li>
-              <li><a href="timeline.html">Timeline</a></li>
-              <li><a href="timeline-about.html">Timeline About</a></li>
-              <li><a href="timeline-album.html">Timeline Album</a></li>
-              <li><a href="timeline-friends.html">Timeline Friends</a></li>
-              <li><a href="edit-profile-basic.html">Edit Profile</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-          </li>
-          <li class="dropdown"><a href="contact.html">Contact</a></li>
+          <!--          <li class="dropdown">-->
+          <!--            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span><img src="assets/images/down-arrow.png" alt="" /></span></a>-->
+          <!--            <ul class="dropdown-menu newsfeed-home">-->
+          <!--              <li><a href="index.html">Landing Page 1</a></li>-->
+          <!--              <li><a href="index-register.html">Landing Page 2</a></li>-->
+          <!--            </ul>-->
+          <!--          </li>-->
+          <!--          <li class="dropdown">-->
+          <!--            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Newsfeed <span><img src="assets/images/down-arrow.png" alt="" /></span></a>-->
+          <!--            <ul class="dropdown-menu newsfeed-home">-->
+          <!--              <li><a href="newsfeed.html">Newsfeed</a></li>-->
+          <!--              <li><a href="newsfeed-people-nearby.html">Poeple Nearly</a></li>-->
+          <!--              <li><a href="newsfeed-friends.html">My friends</a></li>-->
+          <!--              <li><a href="newsfeed-messages.html">Chatroom</a></li>-->
+          <!--              <li><a href="newsfeed-images.html">Images</a></li>-->
+          <!--              <li><a href="newsfeed-videos.html">Videos</a></li>-->
+          <!--            </ul>-->
+          <!--          </li>-->
+          <!--          <li class="dropdown">-->
+          <!--            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Timeline <span><img src="assets/images/down-arrow.png" alt="" /></span></a>-->
+          <!--            <ul class="dropdown-menu login">-->
+          <!--              <li><a href="timeline.html">Timeline</a></li>-->
+          <!--              <li><a href="timeline-about.html">Timeline About</a></li>-->
+          <!--              <li><a href="timeline-album.html">Timeline Album</a></li>-->
+          <!--              <li><a href="timeline-friends.html">Timeline Friends</a></li>-->
+          <!--              <li><a href="edit-profile-basic.html">Edit: Basic Info</a></li>-->
+          <!--              <li><a href="edit-profile-work-edu.html">Edit: Work</a></li>-->
+          <!--              <li><a href="edit-profile-interests.html">Edit: Interests</a></li>-->
+          <!--              <li><a href="edit-profile-settings.html">Account Settings</a></li>-->
+          <!--              <li><a href="edit-profile-password.html">Change Password</a></li>-->
+          <!--            </ul>-->
+          <!--          </li>-->
+          <!--          <li class="dropdown">-->
+          <!--            <a href="#" class="dropdown-toggle pages" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">All Pages <span><img src="assets/images/down-arrow.png" alt="" /></span></a>-->
+          <!--            <ul class="dropdown-menu page-list">-->
+          <!--              <li><a href="index.html">Landing Page 1</a></li>-->
+          <!--              <li><a href="index-register.html">Landing Page 2</a></li>-->
+          <!--              <li><a href="newsfeed.html">Newsfeed</a></li>-->
+          <!--              <li><a href="newsfeed-people-nearby.html">Poeple Nearly</a></li>-->
+          <!--              <li><a href="newsfeed-friends.html">My friends</a></li>-->
+          <!--              <li><a href="newsfeed-messages.html">Chatroom</a></li>-->
+          <!--              <li><a href="newsfeed-images.html">Images</a></li>-->
+          <!--              <li><a href="newsfeed-videos.html">Videos</a></li>-->
+          <!--              <li><a href="timeline.html">Timeline</a></li>-->
+          <!--              <li><a href="timeline-about.html">Timeline About</a></li>-->
+          <!--              <li><a href="timeline-album.html">Timeline Album</a></li>-->
+          <!--              <li><a href="timeline-friends.html">Timeline Friends</a></li>-->
+          <!--              <li><a href="edit-profile-basic.html">Edit Profile</a></li>-->
+          <!--              <li><a href="contact.html">Contact Us</a></li>-->
+          <!--            </ul>-->
+          <!--          </li>-->
+          <!--          <li class="dropdown"><a href="contact.html">Contact</a></li>-->
         </ul>
-        <form class="navbar-form navbar-right hidden-sm">
+        <form style="margin-left: 20%" class=" navbar-form navbar-left hidden-sm">
           <div class="form-group">
             <i style="color: black" class="icon ion-android-search"></i>
-            <input style="background-color: white" type="text" class="form-control" placeholder="Search friends, photos, videos">
+            <input style="background-color: white" type="text" class="form-control"
+                   placeholder="Search friends, photos, videos">
           </div>
         </form>
       </div><!-- /.navbar-collapse -->
@@ -91,9 +93,9 @@
       <div class="col-sm-5">
         <div class="intro-texts">
           <h1 class="text-white">Make Cool Friends !!!</h1>
-          <p> <span style="font-size: 2em">Don’t miss what’s happening</span>
+          <p><span style="font-size: 2em">Don’t miss what’s happening</span>
 
-            <br /> <br />People on Friend Finder are the first to know.</p>
+            <br/> <br/>People on Friend Finder are the first to know.</p>
         </div>
       </div>
       <div class="col-sm-6 col-sm-offset-1">
@@ -114,11 +116,13 @@
               <p class="text-muted">Be cool and join today. Meet millions</p>
 
               <!--Register Form-->
-              <form [formGroup]="registerForm" (ngSubmit)="register()" name="registration_form" id='registration_form' class="form-inline">
+              <form [formGroup]="registerForm" (ngSubmit)="register()" name="registration_form" id='registration_form'
+                    class="form-inline">
                 <div class="row">
                   <div class="form-group col-xs-12">
                     <label for="username" class="sr-only">Username</label>
-                    <input formControlName="newUserName" id="username" class="form-control input-group-lg" type="text" name="username" title="Enter Username" placeholder="Your Username"/>
+                    <input formControlName="newUserName" id="username" class="form-control input-group-lg" type="text"
+                           name="username" title="Enter Username" placeholder="Your Username"/>
                     <div style="color: red;padding-left: 30px" role="alert"
                          *ngIf="registerForm.controls['newUserName'].errors?.['required']
          && registerForm.controls['newUserName'].touched">Username is required!
@@ -128,7 +132,9 @@
                 <div class="row">
                   <div class="form-group col-xs-12">
                     <label for="password" class="sr-only">Password</label>
-                    <input formControlName="newPassWord" id="password" class="form-control input-group-lg" type="password" name="password" title="Enter password" placeholder="Password"/>
+                    <input formControlName="newPassWord" id="password" class="form-control input-group-lg"
+                           type="password" name="password" title="Enter password"
+                           placeholder="Password length must be between 6 to 32"/>
                   </div>
                   <div style="color: red;padding-left: 30px" role="alert"
                        *ngIf="registerForm.controls['newPassWord'].errors?.['required']
@@ -146,7 +152,9 @@
                 <div class="row">
                   <div class="form-group col-xs-12">
                     <label for="rePassword" class="sr-only">Re-Password</label>
-                    <input formControlName="newConfirmPassWord" id="rePassword" class="form-control input-group-lg" type="password" name="rePassword" title="Enter password again" placeholder="Confirm Your Password"/>
+                    <input formControlName="newConfirmPassWord" id="rePassword" class="form-control input-group-lg"
+                           type="password" name="rePassword" title="Enter password again"
+                           placeholder="Confirm Your Password"/>
                   </div>
                   <div style="color: red;padding-left: 30px" role="alert"
                        *ngIf="registerForm.controls['newConfirmPassWord'].errors?.['required']
@@ -165,7 +173,7 @@
                   <div class="form-group col-xs-12">
                     <label for="email" class="sr-only">Email</label>
                     <input formControlName="newEmail" id="email" class="form-control input-group-lg" type="text"
-                           name="Email" title="Enter Email" placeholder="Your Email"/>
+                           name="Email" title="Enter Email" placeholder="Your Email exp : abc@gmail.com"/>
                   </div>
                   <div style="color: red;padding-left: 30px" role="alert"
                        *ngIf="registerForm.controls['newEmail'].errors?.['required']
@@ -194,11 +202,12 @@
                   <p class="birth"><strong>Date of Birth</strong></p>
                   <div style="width: 100% !important;" class="form-group col-sm-3 col-xs-6">
                     <label for="month" class="sr-only"></label>
-                    <input min="{{min}}" max="{{max}}" formControlName="newDateOfBirth" id="month" class="form-control input-group-lg" name="dateOfBirth" type="date">
+                    <input min="{{min}}" max="{{max}}" formControlName="newDateOfBirth" id="month"
+                           class="form-control input-group-lg" name="dateOfBirth" type="date">
                   </div>
                 </div>
                 <p><a (click)="showLogin()">Already have an account?</a></p>
-                <button class="btn btn-primary">Register Now</button>
+                <button [disabled]="!registerForm.valid" class="btn btn-primary">Register Now</button>
               </form><!--Register Now Form Ends-->
 
             </div><!--Registration Form Contents Ends-->
@@ -213,7 +222,8 @@
                 <div class="row">
                   <div class="form-group col-xs-12">
                     <label for="my-username" class="sr-only">Username</label>
-                    <input formControlName="username" id="my-username" class="form-control input-group-lg" type="text" name="Username" title="Enter username" placeholder="Your Username"/>
+                    <input formControlName="username" id="my-username" class="form-control input-group-lg" type="text"
+                           name="Username" title="Enter username" placeholder="Your Username"/>
                   </div>
                   <div style="color: red;padding-left: 30px" role="alert"
                        *ngIf="loginForm.controls['username'].errors?.['required']
@@ -223,7 +233,8 @@
                 <div class="row">
                   <div class="form-group col-xs-12">
                     <label for="my-password" class="sr-only">Password</label>
-                    <input formControlName="password" id="my-password" class="form-control input-group-lg" type="password" name="password" title="Enter password" placeholder="Password"/>
+                    <input formControlName="password" id="my-password" class="form-control input-group-lg"
+                           type="password" name="password" title="Enter password" placeholder="Password"/>
                   </div>
                   <div style="color: red;padding-left: 30px" role="alert"
                        *ngIf="loginForm.controls['password'].errors?.['required']
@@ -263,7 +274,8 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -297,6 +309,41 @@
     </div>
   </div>
 </div>
-
+<div class="modal fade" id="registerSuccess" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="registerSuccess1">Successfully register.Please wait...</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <b>Welcome to Friend Finder {{userName}} !</b>
+      </div>
+      <div class="modal-footer">
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="registerFail" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="registerFail1">Failed to register!</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <b>Username already exists!</b>
+      </div>
+      <div class="modal-footer">
+      </div>
+    </div>
+  </div>
+</div>
 
 
