--- a/src/app/module/user/newsfeed/newsfeed.component.html
+++ b/src/app/module/user/newsfeed/newsfeed.component.html
@@ -44,7 +44,7 @@
                aria-expanded="false">Timeline <span><img src="images/down-arrow.png" alt=""/></span></a>
             <ul class="dropdown-menu login">
               <li><a href="timeline.html">Timeline</a></li>
-              <li><a href="timeline-about.html">Timeline About</a></li>
+              <li><a routerLink="/user/user-detail">Timeline About</a></li>
               <li><a href="timeline-album.html">Timeline Album</a></li>
               <li><a href="timeline-friends.html">Timeline Friends</a></li>
               <li><a href="edit-profile-basic.html">Edit: Basic Info</a></li>
@@ -67,7 +67,7 @@
               <li><a href="newsfeed-messages.html">Chatroom</a></li>
               <li><a href="newsfeed-images.html">Images</a></li>
               <li><a href="timeline.html">Timeline</a></li>
-              <li><a href="timeline-about.html">Timeline About</a></li>
+              <li><a routerLink="/user/user-detail">Timeline About</a></li>
               <li><a href="timeline-album.html">Timeline Album</a></li>
               <li><a href="timeline-friends.html">Timeline Friends</a></li>
               <li><a href="edit-profile-basic.html">Edit Profile</a></li>
