--- a/src/app/module/user/user-detail/user-detail.component.html
+++ b/src/app/module/user/user-detail/user-detail.component.html
@@ -29,7 +29,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                aria-expanded="false">Newsfeed <span><img src="assets/images/down-arrow.png" alt=""/></span></a>
             <ul class="dropdown-menu newsfeed-home">
-              <li><a href="newsfeed.html">Newsfeed</a></li>
+              <li><a routerLink="/user/newsfeed">Newsfeed</a></li>
               <li><a href="newsfeed-people-nearby.html">Poeple Nearly</a></li>
               <li><a href="newsfeed-friends.html">My friends</a></li>
               <li><a href="newsfeed-messages.html">Chatroom</a></li>
