--- a/src/app/module/user/friend-relation/friend-request/friend-request.component.html
+++ b/src/app/module/user/friend-relation/friend-request/friend-request.component.html
@@ -194,7 +194,7 @@
                     <div class="pull-right">
 
                       <button class="btn btn-primary" style="margin-bottom: 5px; margin-top: -20px;"
-                              (click)="acceptFriend(user.id)">Confirm
+                              (click)="acceptFriend(user.id, user.username)">Confirm
                       </button>
                       <br>
                       <button class="btn btn-light" style="padding: 7px 29px; border-radius: 30px" (click)="deleteRequest(user.id)">Delete</button>
@@ -319,4 +319,40 @@
     <p>Thunder Team © 2016. All rights reserved</p>
   </div>
 </footer>
-
+<!--modal-->
+<div class="modal fade" id="confirmRequest" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="confirmRequest1">Accept friend request. Please wait...</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <b>Successfully accepted {{usernameFriend}}'s friend request !</b>
+      </div>
+      <div class="modal-footer">
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="deleteRequest" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteRequest1">Refused a friend request. Please wait...</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <b>Successfully refused {{usernameFriend}}'s friend request !</b>
+      </div>
+      <div class="modal-footer">
+      </div>
+    </div>
+  </div>
+</div>
