--- a/src/app/module/user/friend-relation/list-friend/list-friend.component.css
+++ b/src/app/module/user/friend-relation/list-friend/list-friend.component.css
@@ -2,9 +2,10 @@
 .nut_dropdown {
   background-color: #27aae1;
   color: white;
-  padding: 16px;
+  padding: 10px;
   font-size: 16px;
   border: none;
+  margin-left: 40px;
 }
 /* Thiết lập vị trí cho thẻ div với class dropdown*/
 .dropdown {
@@ -17,14 +18,15 @@
   display: none;
   position: absolute;
   background-color: #f1f1f1;
-  min-width: 160px;
+  min-width: 100px;
+  min-height: 100px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 /* Thiết kế style cho các đường dẫn trong Dropdown */
 .noidung_dropdown a {
   color: black;
-  padding: 12px 16px;
+  padding: 12px 10px;
   text-decoration: none;
   display: block;
 }
