--- a/src/app/module/user/friend-relation/list-friend/list-friend.component.html
+++ b/src/app/module/user/friend-relation/list-friend/list-friend.component.html
@@ -182,7 +182,7 @@
                       <button class="nut_dropdown btn btn-primary pull-right">Friends</button>
                       <div class="noidung_dropdown">
                         <a href="#">Profile</a>
-                        <a [routerLink]="['/user/unFriend/', friend.id]">Unfriend</a>
+                        <a (click)="cancelRelationship(friend.id, friend.username)">Unfriend</a>
 <!--                        <a href="#">Đường Dẫn 3</a>-->
                       </div>
                     </div>
@@ -305,3 +305,21 @@
     <p>Thunder Team © 2016. All rights reserved</p>
   </div>
 </footer>
+<div class="modal fade" id="unFriendSuccess" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="unFriendSuccess1">Cancel Relationship. Please wait...</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <b>Successfully canceled relationship with {{usernameFriend}} !</b>
+      </div>
+      <div class="modal-footer">
+      </div>
+    </div>
+  </div>
+</div>
