--- a/src/app/module/user/people-detail/people-detail.component.html
+++ b/src/app/module/user/people-detail/people-detail.component.html
@@ -150,8 +150,8 @@
             <!--            <li><i class="icon ion-ios-heart-outline"></i><a href="edit-profile-interests.html">My Interests</a></li>-->
 <!--            <li><i class="icon ion-ios-settings"></i><a href="edit-profile-settings.html">Account Settings</a></li>-->
 <!--            <li><i class="icon ion-ios-locked"></i><a routerLink="/user/password">Change Password</a></li>-->
-            <li><i class="icon ion-ios-people"></i><a routerLink="/user/password">Friends </a></li>
-            <li><i class="icon ion-ios-people"></i><a routerLink="/user/password">Mutual Friends</a></li>
+            <li><i class="icon ion-ios-people"></i><a routerLink="/user/password">Friends ({{friendList?.length}}) </a></li>
+            <li><i class="icon ion-ios-people"></i><a routerLink="/user/password">Mutual Friends ({{mutualFriend?.length}})</a></li>
           </ul>
         </div>
         <div class="col-md-7">
