--- a/src/app/module/user/people-detail/people-detail.component.html
+++ b/src/app/module/user/people-detail/people-detail.component.html
@@ -185,9 +185,9 @@
 
         </div>
         <div class="col-md-2 static">
-          <div id="sticky-sidebar">
-            <button class="btn btn-primary" routerLink="/user/edit">Edit profile</button>
-          </div>
+<!--          <div id="sticky-sidebar">-->
+<!--            <button class="btn btn-primary" routerLink="/user/edit">Edit profile</button>-->
+<!--          </div>-->
         </div>
       </div>
     </div>
