đồng bộ giao diện

--- a/src/app/module/user/newsfeed/newsfeed.component.html
+++ b/src/app/module/user/newsfeed/newsfeed.component.html
@@ -44,10 +44,10 @@
                aria-expanded="false">Timeline <span><img src="images/down-arrow.png" alt=""/></span></a>
             <ul class="dropdown-menu login">
               <li><a href="timeline.html">Timeline</a></li>
-              <li><a routerLink="/user/user-detail">Timeline About</a></li>
-              <li><a href="timeline-friends.html">Timeline Friends</a></li>
+              <li><a routerLink="/user/user-detail/timeline">Timeline About</a></li>
+              <li><a routerLink="/user/user-detail/timeline-friends">Timeline Friends</a></li>
               <li><a href="edit-profile-settings.html">Account Settings</a></li>
-              <li><a href="edit-profile-password.html">Change Password</a></li>
+              <li><a routerLink="/user/password">Change Password</a></li>
             </ul>
           </li>
           <li class="dropdown">
