--- a/src/app/module/user/friend-relation/list-friend/list-friend.component.html
+++ b/src/app/module/user/friend-relation/list-friend/list-friend.component.html
@@ -4,9 +4,9 @@
   <div *ngFor="let friend of listFriend" class="friend-list">
     <div class="col-md-6 col-sm-6">
       <div class="friend-card">
-        <img src="http://placehold.it/1030x360" alt="profile-cover" class="img-responsive cover"/>
+        <img src="{{friend?.cover}}" alt="profile-cover" class="img-responsive cover"/>
         <div class="card-info">
-          <img src="http://placehold.it/300x300" alt="user" class="profile-photo-lg"/>
+          <img src="{{friend?.avatar}}" alt="user" class="profile-photo-lg"/>
           <div class="friend-info">
             <div class="row">
               <div class="col-md-6 col-sm-6">
