--- a/src/app/module/user/user-detail/timeline-about/timeline-about.component.html
+++ b/src/app/module/user/user-detail/timeline-about/timeline-about.component.html
@@ -28,3 +28,8 @@
   <!--Sticky Timeline Activity Sidebar-->
 
 </div>
+<div class="col-md-2 static">
+  <div id="sticky-sidebar">
+    <button class="btn btn-primary" routerLink="/user/edit">Edit profile</button>
+  </div>
+</div>
